fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -802,7 +802,7 @@ main {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--text-indigo);
+    background: var(--indigo);
 }
 
 /* Selection styling */
